--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
 # conda env create --file environment.yml
-name: cookiecutter-personal
+# mamba env create --file environment.yml
+name: cookiecutter-conda-data-science
 channels:
-  - anaconda
-  - conda-forge
-  - defaults
+- anaconda
+- conda-forge
+- defaults
 dependencies:
-  - cookiecutter
-prefix: /Users/giocrisraigodoy/anaconda3/envs/cookiecutter-personal
+- cookiecutter
